<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cartrack_label">Cartrack Application</string>
    <string name="create_account_label">Create Account</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="submit_button">Submit</string>

    <string name="account_exist">Username %1$s already registered!</string>
    <string name="account_error">Database error, please try again.</string>
    <string name="invalid">Invalid username or password, please try again or create account if not yet registered.</string>
    <string name="invalid_password">Invalid password.</string>
    <integer name="max_length">20</integer>

    <string name="no_available_search">Please try to search users.</string>

    <string name="item_name">Name : %1$s</string>
    <string name="item_username">Username : %1$s</string>
    <string name="item_email">Email : %1$s</string>
    <string name="item_phone">Phone : %1$s</string>
    <string name="item_website">Website : %1$s</string>

    <string name="details_address_label">Address</string>
    <string name="details_address_street">Street : %1$s</string>
    <string name="details_address_suite">Suite : %1$s</string>
    <string name="details_address_city">City : %1$s</string>
    <string name="details_address_zip_code">Zip Code : %1$s</string>
    <string name="details_address_location_label">Click Location</string>

    <string name="details_company_label">Company</string>
    <string name="details_company_name">Name : %1$s</string>

    <string name="item_country">%1$s %2$s</string>

    <string name="map_address">Address: %1$s %2$s %3$s %4$s</string>
</resources>