<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.enaz.cartrack.main.ui.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding16">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cart_track_label"
            style="@style/AvenirHeavy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin50"
            android:text="@string/cartrack_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_username"
            style="@style/AvenirMedium.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin50"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:onTextChanged="@{(text, start, before, count) -> loginViewModel.onUsernameTextChanged(text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart_track_label" />

        <EditText
            android:id="@+id/editText_password"
            style="@style/AvenirMedium.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:onTextChanged="@{(text, start, before, count) -> loginViewModel.onPasswordTextChanged(text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_username" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_button"
            style="@style/AvenirMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height50"
            android:layout_marginTop="@dimen/margin100"
            android:background="@color/disabledColorPrimary"
            android:enabled="false"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password" />

        <TextView
            android:id="@+id/create_account"
            style="@style/AvenirMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:text="@string/create_account_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
