<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="createAccountViewModel"
            type="com.enaz.cartrack.main.ui.viewmodel.CreateAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/create_account_label"
            style="@style/AvenirHeavy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding16"
            android:layout_marginTop="@dimen/margin50"
            android:layout_marginEnd="@dimen/padding16"
            android:text="@string/create_account_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/first_name_field"
            style="@style/AvenirMedium.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding16"
            android:layout_marginTop="@dimen/margin50"
            android:layout_marginEnd="@dimen/padding16"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLength="@integer/max_length"
            android:onTextChanged="@{(text, start, before, count) -> createAccountViewModel.onFirstNameChanged(text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account_label" />

        <EditText
            android:id="@+id/last_name_field"
            style="@style/AvenirMedium.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding16"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/padding16"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:maxLength="@integer/max_length"
            android:onTextChanged="@{(text, start, before, count) -> createAccountViewModel.onLastNameChanged(text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_field" />

        <EditText
            android:id="@+id/user_name_field"
            style="@style/AvenirMedium.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding16"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/padding16"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:maxLength="@integer/max_length"
            android:onTextChanged="@{(text, start, before, count) -> createAccountViewModel.onUsernameChanged(text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_field" />

        <EditText
            android:id="@+id/password_field"
            style="@style/AvenirMedium.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding16"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/padding16"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="@integer/max_length"
            android:onTextChanged="@{(text, start, before, count) -> createAccountViewModel.onPasswordChanged(text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_field" />

        <EditText
            android:id="@+id/confirm_password_field"
            style="@style/AvenirMedium.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding16"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/padding16"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="@integer/max_length"
            android:onTextChanged="@{(text, start, before, count) -> createAccountViewModel.onConfirmPasswordChanged(text)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_field" />

        <EditText
            android:id="@+id/country_field"
            style="@style/AvenirMedium.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding16"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/padding16"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/country"
            android:inputType="text"
            android:maxLength="@integer/max_length"
            android:onTextChanged="@{(text, start, before, count) -> createAccountViewModel.onConfirmPasswordChanged(text)}"
            android:text="Philippines"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_field" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_message"
            style="@style/AvenirMedium.Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding16"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/padding16"
            android:gravity="center_horizontal|center_vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_field" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/submit_button"
            style="@style/AvenirMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height50"
            android:layout_marginStart="@dimen/padding16"
            android:layout_marginTop="@dimen/margin70"
            android:layout_marginEnd="@dimen/padding16"
            android:background="@color/disabledColorPrimary"
            android:enabled="false"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_field" />


        <FrameLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dialog_bg"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
